--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </ul>
     <div id="main-page">
             <form class= "form-inline">
-                <input type="text" name="search" placeholder="Search artist..." id="search-box" class="form-control">
+                <input type="text" name="search" placeholder="Search artist..." id="search-box" class="form-control" required>
                 <input type="submit" value="Submit" id="submit" class="btn btn-default"/>
             </form>
         <div class='template hidden well well-lg col-md-4'>
@@ -43,8 +43,8 @@
         </div>
         <div id="fav-container"></div>
     </div>
-    
-    
+
+
     <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="main.js"></script>
