--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,19 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Raleway" rel="stylesheet">
 </head>
 <body>
         <ul class="nav nav-tabs">
             <li id="home-tab" role="presentation" class="active"><a href="#" class="home" role="tab" data-toggle="tab">Home</a></li></li>
             <li id="fav-tab" role="presentation"><a href="#" id="favorites" role="tab" data-toggle="tab">Favorites</a></li></li>
         </ul>
+        <div class='brand-div'>
+            <img class='guitar' src='./guitar-head.png' />
+            <div class='title-div'>
+                <h3 class='brand'>Favorite <br /> Guitar Tabs</h3>
+            </div>
+        </div>
     <div id="main-page">
             <form class= "form-inline">
                 <input type="text" name="search" placeholder="Search artist..." id="search-box" class="form-control" required>
