resposive design added

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <input type="text" name="search" placeholder="Search artist..." id="search-box" class="form-control" required>
                 <input type="submit" value="Submit" id="submit" class="btn btn-default"/>
             </form>
-        <div class='template hidden well well-lg col-md-4'>
+        <div class='template hidden well well-lg col-md-4 col-sm-4'>
             <i class="fa fa-star-o fa-2x" aria-hidden="true"></i>
             <dl class="search-results">
                 <dt>Artist:</dt>
