landing and style

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                     <a href="#" id="favorites" class='nav-link' role="tab" data-toggle="tab">Favorite</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0 header-form">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-box" class="form-control">
                 <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
@@ -29,6 +29,18 @@
     </nav>
     <div class='landing'>
         <img src='./images/guitar.jpg' class='expand' />
+        <div class='descripton'>
+            <h3 class='about'>Find your favorite guitar tabs</h3>
+            <ul class='about-list'>
+                <li><h3><img src='./images/Search Filled-50.png' /></h3><h4>Search</h4><h5>for an artist</h5></li>
+                <li><h3><img src='./images/Marker-50.png' /></h3><h4>Find</h4><h5>a song</h5></li>
+                <li><h3><img src='./images/Guitar-50.png' /></h3><h4>Play</h4><h5>guitar</h5></li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0 landing-search">
+                <input class="form-control mr-sm-2 landing-input" type="text" placeholder="Search" id="search-box" class="form-control">
+                <button id="submit" class="btn btn-outline-success my-2 my-sm-0 landing-button" type="submit">Search</button>
+            </form>
+        </div>
     </div>
     <div id="main-page">
         <div class='template hidden well well-lg col-md-4 col-sm-4'>
