--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0 header-form">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-box" class="form-control">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="search-box landing-box">
                 <button id="submit" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
     <div class='landing'>
         <img src='./images/guitar.jpg' class='expand' />
-        <div class='descripton'>
+        <div class='col-md-4 col-sm-6 descripton'>
             <h3 class='about'>Find your favorite guitar tabs</h3>
             <ul class='about-list'>
                 <li><h3><img src='./images/Search Filled-50.png' /></h3><h4>Search</h4><h5>for an artist</h5></li>
