--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
                 <dt>Song:</dt>
                     <dd class="song text-uppercase"><a class="url" href="" target="_blank"></a></dd>
                     <dd class="song-id hidden"></dd>
+                    <dd class='tab-type hidden'></dd>
             </dl>
         </div>
         <div id="container"></div>
