--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <a class="navbar-brand" href="#">TABS</a>
         
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                 <li class="nav-item active" id="home-tab" role="presentation" class="active">
                     <a href="#" class="nav-link" role="tab" data-toggle="tab">Home</a>
@@ -29,7 +29,7 @@
     </nav>
     <div class='landing'>
         <img src='./images/guitar.jpg' class='expand' />
-        <div class='col-md-4 col-sm-6 descripton'>
+        <div class='col-md-4 col-sm-8 descripton'>
             <h3 class='about'>Find your favorite guitar tabs</h3>
             <ul class='about-list'>
                 <li><h3><img src='./images/Search Filled-50.png' /></h3><h4>Search</h4><h5>for an artist</h5></li>
